0.6.6/_sources/gallery/pass_colormaps.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/pass_colormaps.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_pass_colormaps.py>`
        to download the full example as a Python script or as a
        Jupyter notebook.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_pass_colormaps.py:


Pass colormaps
==============

Add named or unnamed vispy colormaps to existing layers.

.. tags:: visualization-basic

.. GENERATED FROM PYTHON SOURCE LINES 9-32



.. image-sg:: /gallery/images/sphx_glr_pass_colormaps_001.png
   :alt: pass colormaps
   :srcset: /gallery/images/sphx_glr_pass_colormaps_001.png
   :class: sphx-glr-single-img





.. code-block:: Python


    import numpy as np
    from skimage import data

    import napari

    histo = data.astronaut() / 255
    rch, gch, bch = np.transpose(histo, (2, 0, 1))

    v = napari.Viewer()

    rlayer = v.add_image(
        rch, name='red channel', colormap='red', blending='additive'
    )
    glayer = v.add_image(
        gch, name='green channel', colormap='green', blending='additive'
    )
    blayer = v.add_image(
        bch, name='blue channel', colormap='blue', blending='additive'
    )

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_pass_colormaps.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: pass_colormaps.ipynb <pass_colormaps.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: pass_colormaps.py <pass_colormaps.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: pass_colormaps.zip <pass_colormaps.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
